data center agora fornece informações a clientes